[package]
name = "packet-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
pcap = { version = "2.3.0", features = ["capture-stream", "tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "rt", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
bytes = "1.10.1"
clap = { version = "4.5.46", features = ["derive"] }
